# goopax-examples

./: .gitmodules  CMakeLists.txt  README-android.sh  README-individualtargets.sh  README.txt  SDL.cmake  Windows.cmake  android-ninja-config.sh  build-all.sh  build-external-libraries.sh  build-for-android.sh  build.sh  deploy.sh  ninja-config.sh
ext/: Boost.cmake  CMakeLists.txt  Eigen.cmake  GMP.cmake  OpenCV.cmake  SDL.cmake  build-boost.sh  build-eigen.sh  build-gmp.sh  build-opencv.sh  build-sdl.sh  download-eigen.sh  download-sdl.sh
src/: Boost.cmake  CMakeLists.txt  Eigen.cmake  GMP.cmake  OpenCV.cmake  SDL.cmake  SDL3.cmake  cuda-interop.cu  deep-zoom-mandelbrot.cpp  fft.cpp  mandelbrot.cpp  matmul.cpp  nbody.cpp
src/cmake/: Boost.cmake  Eigen.cmake  GMP.cmake  OpenCV.cmake  SDL3.cmake  common.cmake  macros.cmake
src/common/: particle.hpp
src/common/draw/: CMakeLists.txt  window.cpp  window.h  window_gl.cpp  window_gl.h  window_metal.h  window_metal.mm  window_plain.cpp  window_plain.h  window_sdl.cpp  window_sdl.h  window_vulkan.cpp
src/ext/: CMakeLists.txt
